Tue Jun  4 17:39:34 2002  Owen Taylor  <otaylor@redhat.com>

 	* configure.in: If we have xft .pc file, use that
 	when checking for Xft/Xrender. (Still need to separate
 	out HAVE_XFT, HAVE_RENDER)
 
 	* configure.in: Make sure Xft cflags come before X cflags.
 
Tue Jun  4 21:13:57 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.[ch]: added gtk_tree_view_expand_to_path.

Tue Jun  4 19:24:41 2002  Kristian Rietveld  <kris@gtk.org>

	Discussed in #76249.

	* gtk/gtkliststore.[ch]: made gtk_list_store_remove return a gboolean,
	added gtk_list_store_iter_is_valid.

	* gtk/gtktreestore.[ch]: made gtk_tree_store_remove return a gboolean,
	added gtk_tree_store_iter_is_valid.

	* gtk/gtktreemodelsort.[ch]: added VALID_ITER macro as in liststore
	and treestore sources, added gtk_tree_model_sort_iter_is_valid.
	
Tue Jun  4 19:18:20 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodel.[ch]: add gtk_tree_model_get_string_from_iter
	(#74667).

2002-06-04  Daniel Elstner  <daniel.elstner@gmx.net>

	[ merge from stable ]

	* gtk/gtkcellrenderertoggle.c (gtk_cell_renderer_toggle_render):
	Really fix #83796: Revert jrb's last patch, and move the second
	if-clause into the fist one's else-branch.  This is also what
	the other cell renderers do.

2002-06-03  Federico Mena Quintero  <federico@ximian.com>

	* gdk/gdkpixbuf-drawable.c (rgb565msb): Fix the MSB -> MSB case.
	Fixes #79190.

Sat Jun  1 10:43:28 2002  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkcellrenderertoggle.c (gtk_cell_renderer_toggle_render): 
	add missing flag, #83796

2002-05-30  Michael Meeks  <michael@ximian.com>

	* gtk/gtkmenu.c (gtk_menu_popup): destroy the transfer
	window if the grab fails so we don't get events on this
	window after the menu is finalized with a duff GtkWidget
	pointer: #82366

Mon May 28 13:28:10  Shivram U  <shivaram.upadhyayula@wipro.com>

	* gtk/gtktextbuffer.c (selection_data_get_buffer): Check if the owner