@@ -83,13 +83,14 @@ void             gtk_tree_selection_set_select_function (GtkTreeSelection       
 gpointer         gtk_tree_selection_get_user_data       (GtkTreeSelection            *selection);
 GtkTreeView*     gtk_tree_selection_get_tree_view       (GtkTreeSelection            *selection);
 
-/* Only meaningful if GTK_TREE_SELECTION_SINGLE is set */
-/* Use selected_foreach for GTK_TREE_SELECTION_MULTI */
+/* Only meaningful if GTK_SELECTION_SINGLE or GTK_SELECTION_BROWSE is set */
+/* Use selected_foreach or get_selected_rows for GTK_SELECTION_MULTIPLE */
 gboolean         gtk_tree_selection_get_selected        (GtkTreeSelection            *selection,
 							 GtkTreeModel               **model,
 							 GtkTreeIter                 *iter);
-
-/* FIXME: Get a more convenient get_selection function????  one returning GSList?? */
+GList *          gtk_tree_selection_get_selected_rows   (GtkTreeSelection            *selection,
+                                                         GtkTreeModel               **model);
+gint             gtk_tree_selection_count_selected_rows (GtkTreeSelection            *selection);
 void             gtk_tree_selection_selected_foreach    (GtkTreeSelection            *selection,
 							 GtkTreeSelectionForeachFunc  func,
 							 gpointer                     data);
@@ -109,6 +110,9 @@ void             gtk_tree_selection_select_all          (GtkTreeSelection       
 void             gtk_tree_selection_unselect_all        (GtkTreeSelection            *selection);
 void             gtk_tree_selection_select_range        (GtkTreeSelection            *selection,
 							 GtkTreePath                 *start_path,
+							 GtkTreePath                 *end_path);
+void             gtk_tree_selection_unselect_range      (GtkTreeSelection            *selection,
+                                                         GtkTreePath                 *start_path,
 							 GtkTreePath                 *end_path);
 
 
